Kubernetes/personal-site-19.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: personal-site-19
  name: personal-site-19
spec:
  selector:
    matchLabels:
      app: personal-site-19
  replicas: 1
  template:
    metadata:
      labels:
        app: personal-site-19
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
