Kubernetes/student19-adinusa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student19-adinusa
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
