Kubernetes/nfs-server.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      name: nfs-server
    name: nfs-server
  spec:
    progressDeadlineSeconds: 2147483647
    replicas: 1
    revisionHistoryLimit: 2147483647
    selector:
      matchLabels:
        name: nfs-server
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: nfs-server
      spec:
        containers:
        - image: k8s.gcr.io/volume-nfs:0.8
          imagePullPolicy: IfNotPresent
          name: nfs-server
          ports:
          - containerPort: 2049
            name: nfs
            protocol: TCP
          - containerPort: 20048
            name: mountd
            protocol: TCP
          - containerPort: 111
            name: rpcbind
            protocol: TCP
          resources: {}
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /exports
            name: mypvc
        dnsPolicy: ClusterFirst
        nodeSelector:
          kubernetes.io/hostname: student19-worker01
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - hostPath:
            path: /data
            type: ""
          name: mypvc
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: nfs-server
  spec:
    ports:
    - name: nfs
      port: 2049
      protocol: TCP
      targetPort: 2049
    - name: mountd
      port: 20048
      protocol: TCP
      targetPort: 20048
    - name: rpcbind
      port: 111
      protocol: TCP
      targetPort: 111
    selector:
      name: nfs-server
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata: {}
