Kubernetes/quiz-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-2-svc
  labels:
    run: quiz-2-svc
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30019
    protocol: TCP
  selector:
    app: httpd
