Kubernetes/rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: web-nginx.ok
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-nginx
                port:
                  number: 80
    - host: web-apache.ok
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-apache
                port:
                  number: 80
    - host: rsvp-app-19.ok
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rsvp
                port:
                  number: 80

    - host: my.dharma-website.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-site-19
                port:
                  number: 80
